--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <div class="app-icon-wrapper"><img src="img/passwordGenerator.svg" alt="Генератор паролей"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Генератор паролей</span></div>
         </a>
-        <a href="?app=percentageCalculator" class="app-item" style="--app-color: #d946ef;" data-name="Калькулятор процентных соотношений" data-module="percentageCalculator">
+        <a href="?app=percentageCalculator" class="app-item" style="--app-color: #d946ef;" data-name="Процентный калькулятор" data-module="percentageCalculator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
-            <div class="app-icon-wrapper"><img src="img/percentageCalculator.svg" alt="Калькулятор процентных соотношений"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Калькулятор процентных соотношений</span></div>
+            <div class="app-icon-wrapper"><img src="img/percentageCalculator.svg" alt="Процентный калькулятор"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Процентный калькулятор</span></div>
         </a>
         <a href="?app=timer" class="app-item" style="--app-color: #fb923c;" data-name="Таймер" data-module="timer">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
