--- a/offline.html
+++ b/offline.html
@@ -103,14 +103,14 @@
                 'Генератор чисел': 'numberGenerator', 'Случайный цвет': 'randomColor', 'Колесо фортуны': 'fortuneWheel', 'Шар предсказаний': 'magicBall',
                 'Конвертер величин': 'unitConverter', 'Конвертер регистра': 'caseConverter', 'Конвертер цветов': 'colorConverter',
                 'Конвертер форматов изображений': 'imageConverter', 'Транслитерация текста': 'textTranslit',
-                'Калькулятор ИМТ': 'bmiCalculator', 'Калькулятор дат': 'dateCalculator', 'Калькулятор процентных соотношений': 'percentageCalculator',
+                'Калькулятор ИМТ': 'bmiCalculator', 'Калькулятор дат': 'dateCalculator', 'Процентный калькулятор': 'percentageCalculator',
                 'Счетчик слов и символов': 'wordCounter', 'Эмодзи и символы': 'emojiAndSymbols', 'Изменение размера изображений': 'imageResizer',
                 'Текст в речь': 'textToSpeech', 'Диктофон': 'voiceRecorder', 'Архиватор файлов (ZIP)': 'zipArchiver',
                 'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest'
             };
 
             // Приложения, требующие онлайн
-            const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
+            const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks', 'siteSkeletonGenerator'];
 
             let appLinksHtml = '';
             for (const appName in allApps) {
