--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <meta name="theme-color" content="#3b82f6"/>
     <!-- Иконка для Apple-устройств (важен PNG) -->
     <link rel="apple-touch-icon" href="img/icons/icon-192x192.png">
+    
+    {/* --- ИЗМЕНЕНИЕ ЗДЕСЬ --- */}
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes"> {/* <-- ДОБАВЛЕН НОВЫЙ СТАНДАРТНЫЙ ТЕГ */}
+    
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Подсказки для ускорения соединения -->
