--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <!-- Иконка для Apple-устройств (важен PNG) -->
     <link rel="apple-touch-icon" href="img/icons/icon-192x192.png">
     
-    {/* --- ИЗМЕНЕНИЕ ЗДЕСЬ --- */}
+
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-capable" content="yes"> {/* <-- ДОБАВЛЕН НОВЫЙ СТАНДАРТНЫЙ ТЕГ */}
+    <meta name="mobile-web-app-capable" content="yes"> 
     
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
