--- a/index.html
+++ b/index.html
@@ -303,6 +303,21 @@
             <div class="app-icon-wrapper"><img src="img/siteSkeletonGenerator.svg" alt="Генератор каркаса Сайта"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Генератор каркаса Сайта</span></div>
         </a>
+                <a href="?app=mouseTester" class="app-item" style="--app-color: #34d399;" data-name="Тест мыши" data-module="mouseTester">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/mouseTester.svg" alt="Тест мыши"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Тест мыши</span></div>
+        </a>
+        <a href="?app=keyboardTester" class="app-item" style="--app-color: #60a5fa;" data-name="Тест клавиатуры" data-module="keyboardTester">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/keyboardTester.svg" alt="Тест клавиатуры"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Тест клавиатуры</span></div>
+        </a>
+        <a href="?app=drawingPad" class="app-item" style="--app-color: #f472b6;" data-name="Графический редактор" data-module="drawingPad">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/drawingPad.svg" alt="Графический редактор"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Графический редактор</span></div>
+        </a>
     </template>
 </body>
 </html>
