--- a/offline.html
+++ b/offline.html
@@ -106,7 +106,10 @@
                 'Калькулятор ИМТ': 'bmiCalculator', 'Калькулятор дат': 'dateCalculator', 'Процентный калькулятор': 'percentageCalculator',
                 'Счетчик слов и символов': 'wordCounter', 'Эмодзи и символы': 'emojiAndSymbols', 'Изменение размера изображений': 'imageResizer',
                 'Текст в речь': 'textToSpeech', 'Диктофон': 'voiceRecorder', 'Архиватор файлов (ZIP)': 'zipArchiver',
-                'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest'
+                'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest',
+                'Тест мыши': 'mouseTester', // <-- ДОБАВЛЕНО
+                'Тест клавиатуры': 'keyboardTester', // <-- ДОБАВЛЕНО
+                'Графический редактор': 'drawingPad' // <-- ДОБАВЛЕНО
             };
 
             // Приложения, требующие онлайн
