--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <a href="?app=siteSkeletonGenerator" class="app-item" style="--app-color: #7e22ce;" data-name="Генератор каркаса Сайта" data-module="siteSkeletonGenerator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/siteSkeletonGenerator.svg" alt="Генератор каркаса Сайта"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Генератор каркаса Сайта</span></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Генератор каркаса сайта</span></div>
         </a>
                 <a href="?app=mouseTester" class="app-item" style="--app-color: #34d399;" data-name="Тест мыши" data-module="mouseTester">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
