--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 </head>
 <body class="bg-gradient-to-b from-gray-100 to-gray-200 text-gray-900 dark:bg-gradient-to-b dark:from-gray-800 dark:to-black dark:text-gray-200 font-sans p-4">
 
+    <!-- ИЗМЕНЕНИЕ: Добавлен оверлей для первоначальной загрузки -->
+    <div id="initial-loading-overlay" class="fixed inset-0 bg-gray-100 dark:bg-gray-800 flex justify-center items-center z-[9999]">
+        <img src="img/loading.svg" alt="Загрузка..." class="w-16 h-16">
+    </div>
+
     <!-- Контейнер в правом верхнем углу -->
     <div class="fixed top-4 right-4 flex items-center gap-4 z-50">
         <div id="google-signin-top-right-container"></div>
