--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
 </head>
 <body class="bg-gradient-to-b from-gray-100 to-gray-200 text-gray-900 dark:bg-gradient-to-b dark:from-gray-800 dark:to-black dark:text-gray-200 font-sans p-4">
 
-    <!-- ИЗМЕНЕНИЕ: Добавлен оверлей для первоначальной загрузки -->
-    <div id="initial-loading-overlay" class="fixed inset-0 bg-gray-100 dark:bg-gray-800 flex justify-center items-center z-[9999]">
+    <!-- ИЗМЕНЕНИЕ: Добавлен заголовок в оверлей загрузки -->
+    <div id="initial-loading-overlay" class="fixed inset-0 bg-gray-100 dark:bg-gray-800 flex flex-col justify-center items-center gap-6 z-[9999]">
+        <h1 class="text-5xl font-bold text-center bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-teal-400">
+            Mini Apps
+        </h1>
         <img src="img/loading.svg" alt="Загрузка..." class="w-16 h-16">
     </div>
 
