--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Mini Appsы</title>
+    <title>Mini Apps</title>
 
     <!-- Основная иконка сайта (Favicon) -->
     <link rel="icon" href="img/logo.svg" type="image/svg+xml">
