--- a/index.html
+++ b/index.html
@@ -334,6 +334,26 @@
             <div class="app-icon-wrapper"><img src="img/drawingPad.svg" alt="Графический редактор"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Графический редактор</span></div>
         </a>
+                <a href="?app=textDiffTool" class="app-item" style="--app-color: #2dd4bf;" data-name="Сравнение текста" data-module="textDiffTool">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/textDiffTool.svg" alt="Сравнение текста"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Сравнение текста</span></div>
+        </a>
+        <a href="?app=faviconGenerator" class="app-item" style="--app-color: #fb7185;" data-name="Генератор Favicon" data-module="faviconGenerator">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/faviconGenerator.svg" alt="Генератор Favicon"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Генератор Favicon</span></div>
+        </a>
+        <a href="?app=loanCalculator" class="app-item" style="--app-color: #a78bfa;" data-name="Калькулятор кредита" data-module="loanCalculator">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/loanCalculator.svg" alt="Калькулятор кредита"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Калькулятор кредита</span></div>
+        </a>
+        <a href="?app=typingTest" class="app-item" style="--app-color: #f59e0b;" data-name="Тест скорости печати" data-module="typingTest">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/typingTest.svg" alt="Тест скорости печати"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Тест скорости печати</span></div>
+        </a>
     </template>
 </body>
 </html>
