--- a/offline.html
+++ b/offline.html
@@ -117,12 +117,17 @@
                 'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest',
                 'Тест мыши': 'mouseTester', 'Тест клавиатуры': 'keyboardTester', 'Графический редактор': 'drawingPad',
                 'Генератор каркаса сайта': 'siteSkeletonGenerator',
+                // --- НОВЫЕ ПРИЛОЖЕНИЯ ---
+                'Сравнение текста': 'textDiffTool',
+                'Генератор Favicon': 'faviconGenerator',
+                'Калькулятор кредита': 'loanCalculator',
+                'Тест скорости печати': 'typingTest',
+                // -----------------------
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks'
             };
             
-            // ИСПРАВЛЕННЫЙ СПИСОК: siteSkeletonGenerator убран отсюда
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
             
             const sortedAppNames = Object.keys(allApps).sort((a, b) => a.localeCompare(b, 'ru'));
