--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@
             <div class="app-icon-wrapper"><img src="img/typingTest.svg" alt="Тест скорости печати"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Тест скорости печати</span></div>
         </a>
+        <a href="?app=screenRecorder" class="app-item" style="--app-color: #ef4444;" data-name="Запись экрана" data-module="screenRecorder">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/screenRecorder.svg" alt="Запись экрана"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Запись экрана</span></div>
+        </a>
     </template>
 </body>
 </html>
