--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         <a href="?app=faviconGenerator" class="app-item" style="--app-color: #fb7185;" data-name="Генератор Favicon" data-module="faviconGenerator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/faviconGenerator.svg" alt="Генератор Favicon"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Генератор Favicon</span></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Генератор favicon</span></div>
         </a>
         <a href="?app=loanCalculator" class="app-item" style="--app-color: #a78bfa;" data-name="Калькулятор кредита" data-module="loanCalculator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
