--- a/offline.html
+++ b/offline.html
@@ -117,12 +117,11 @@
                 'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest',
                 'Тест мыши': 'mouseTester', 'Тест клавиатуры': 'keyboardTester', 'Графический редактор': 'drawingPad',
                 'Генератор каркаса сайта': 'siteSkeletonGenerator',
-                // --- НОВЫЕ ПРИЛОЖЕНИЯ ---
                 'Сравнение текста': 'textDiffTool',
                 'Генератор Favicon': 'faviconGenerator',
                 'Калькулятор кредита': 'loanCalculator',
                 'Тест скорости печати': 'typingTest',
-                // -----------------------
+                'Запись экрана': 'screenRecorder', // <-- ДОБАВЛЕНО
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks'
