--- a/index.html
+++ b/index.html
@@ -359,6 +359,11 @@
             <div class="app-icon-wrapper"><img src="img/screenRecorder.svg" alt="Запись экрана"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Запись экрана</span></div>
         </a>
+                <a href="?app=flappyBird" class="app-item" style="--app-color: #f9a825;" data-name="Flappy Bird" data-module="flappyBird">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/flappyBird.svg" alt="Flappy Bird"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Flappy Bird</span></div>
+        </a>
     </template>
 </body>
 </html>
