--- a/offline.html
+++ b/offline.html
@@ -122,6 +122,7 @@
                 'Калькулятор кредита': 'loanCalculator',
                 'Тест скорости печати': 'typingTest',
                 'Запись экрана': 'screenRecorder', // <-- ДОБАВЛЕНО
+                'Flappy Bird': 'flappyBird',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks'
