--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <!-- PWA Мета-теги -->
     <meta name="description" content="Коллекция полезных мини-приложений и инструментов прямо в вашем браузере.">
-    <link rel="manifest" href="manifest.json">
+    <!-- ИЗМЕНЕНИЕ: Добавлена версия для сброса кэша -->
+    <link rel="manifest" href="manifest.json?v=3">
     <meta name="theme-color" content="#3b82f6"/>
     <!-- Иконка для Apple-устройств (важен PNG) -->
     <link rel="apple-touch-icon" href="img/icons/icon-192x192.png">
