--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
             <div class="app-icon-wrapper"><img src="img/flappyBird.svg" alt="Flappy Bird"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Flappy Bird</span></div>
         </a>
+        <a href="?app=textAnalyzer" class="app-item" style="--app-color: #8b5cf6;" data-name="Анализатор текста" data-module="textAnalyzer">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/textAnalyzer.svg" alt="Анализатор текста"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Анализатор текста</span></div>
+        </a>
     </template>
 </body>
 </html>
