--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
             <div class="app-icon-wrapper"><img src="img/textAnalyzer.svg" alt="Анализатор текста"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Анализатор текста</span></div>
         </a>
+        <a href="?app=virtualDice" class="app-item" style="--app-color: #9333ea;" data-name="Виртуальный кубик" data-module="virtualDice">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/virtualDice.svg" alt="Виртуальный кубик"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Виртуальный кубик</span></div>
+        </a>
     </template>
 </body>
 </html>
