--- a/offline.html
+++ b/offline.html
@@ -125,7 +125,8 @@
                 'Flappy Bird': 'flappyBird',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
-                'Заметки и задачи': 'notesAndTasks'
+                'Заметки и задачи': 'notesAndTasks',
+                'Виртуальный кубик': 'virtualDice'
             };
             
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
