--- a/index.html
+++ b/index.html
@@ -370,6 +370,11 @@
             <div class="app-icon-wrapper"><img src="img/virtualDice.svg" alt="Виртуальный кубик"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Виртуальный кубик</span></div>
         </a>
+        <a href="?app=calorieCalculator" class="app-item" style="--app-color: #22c55e;" data-name="Калькулятор калорий" data-module="calorieCalculator">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/calorieCalculator.svg" alt="Калькулятор калорий"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Калькулятор калорий</span></div>
+        </a>
     </template>
 </body>
 </html>
