--- a/offline.html
+++ b/offline.html
@@ -126,7 +126,8 @@
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
-                'Виртуальный кубик': 'virtualDice'
+                'Виртуальный кубик': 'virtualDice',
+                'Калькулятор калорий': 'calorieCalculator'
             };
             
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
