--- a/index.html
+++ b/index.html
@@ -375,6 +375,11 @@
             <div class="app-icon-wrapper"><img src="img/calorieCalculator.svg" alt="Калькулятор калорий"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Калькулятор калорий</span></div>
         </a>
+                <a href="?app=calculator" class="app-item" style="--app-color: #8b5cf6;" data-name="Калькулятор" data-module="calculator">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/calculator.svg" alt="Калькулятор"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Калькулятор</span></div>
+        </a>
     </template>
 </body>
 </html>
