--- a/offline.html
+++ b/offline.html
@@ -127,7 +127,8 @@
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
                 'Виртуальный кубик': 'virtualDice',
-                'Калькулятор калорий': 'calorieCalculator'
+                'Калькулятор калорий': 'calorieCalculator',
+                'Калькулятор': 'calculator',
             };
             
             const onlineOnlyApps = ['speedTest', 'radio', 'myIp', 'currencyCalculator', 'notesAndTasks'];
