--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
             <div id="filter-container" class="flex flex-wrap justify-center items-center gap-2 sm:gap-4 mb-6">
                 <button data-sort="my-apps" class="filter-btn hidden">Мои приложения</button>
+                <button id="sort-my-apps-btn" class="filter-btn hidden">Сортировать</button>
                 <button data-sort="default" class="filter-btn active">Все</button>
                 <button data-sort="popular" class="filter-btn">Популярные</button>
                 <button data-sort="new" class="filter-btn">Новые</button>
