--- a/offline.html
+++ b/offline.html
@@ -112,7 +112,7 @@
                 'Конвертер величин': 'unitConverter', 'Конвертер регистра': 'caseConverter', 'Конвертер цветов': 'colorConverter',
                 'Конвертер форматов изображений': 'imageConverter', 'Транслитерация текста': 'textTranslit', 'Конвертер часовых поясов': 'timezoneConverter',
                 'Калькулятор ИМТ': 'bmiCalculator', 'Калькулятор дат': 'dateCalculator', 'Процентный калькулятор': 'percentageCalculator',
-                'Счетчик слов и символов': 'wordCounter', 'Эмодзи и символы': 'emojiAndSymbols', 'Изменение размера изображений': 'imageResizer',
+                'Эмодзи и символы': 'emojiAndSymbols', 'Изменение размера изображений': 'imageResizer',
                 'Текст в речь': 'textToSpeech', 'Диктофон': 'voiceRecorder', 'Архиватор файлов (ZIP)': 'zipArchiver',
                 'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest',
                 'Тест мыши': 'mouseTester', 'Тест клавиатуры': 'keyboardTester', 'Графический редактор': 'drawingPad',
