--- a/index.html
+++ b/index.html
@@ -235,11 +235,6 @@
             <div class="app-icon-wrapper"><img src="img/caseConverter.svg" alt="Конвертер регистра"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Конвертер регистра</span></div>
         </a>
-        <a href="?app=imageConverter" class="app-item" style="--app-color: #f97316;" data-name="Конвертер форматов изображений" data-module="imageConverter">
-            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
-            <div class="app-icon-wrapper"><img src="img/imageConverter.svg" alt="Конвертер форматов изображений"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Конвертер форматов изображений</span></div>
-        </a>
         <a href="?app=colorConverter" class="app-item" style="--app-color: #a855f7;" data-name="Конвертер цветов" data-module="colorConverter">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/colorConverter.svg" alt="Конвертер цветов"></div>
@@ -255,10 +250,6 @@
             <div class="app-icon-wrapper"><img src="img/textTranslit.svg" alt="Транслитерация текста"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Транслитерация текста</span></div>
         </a>
-        <a href="?app=imageResizer" class="app-item" style="--app-color: #f43f5e;" data-name="Изменение размера изображений" data-module="imageResizer">
-            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
-            <div class="app-icon-wrapper"><img src="img/imageResizer.svg" alt="Изменение размера изображений"></div>
-            <div class="app-name-wrapper"><span class="app-name-text">Изменение размера изображений</span></div>
         </a>
         <a href="?app=currencyCalculator" class="app-item" style="--app-color: #10b981;" data-name="Калькулятор валют" data-module="currencyCalculator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
@@ -379,6 +370,11 @@
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/calculator.svg" alt="Калькулятор"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Калькулятор</span></div>
+        </a>
+                <a href="?app=imageEditor" class="app-item" style="--app-color: #8b5cf6;" data-name="Редактор изображений" data-module="imageEditor">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/imageEditor.svg" alt="Редактор изображений"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Редактор изображений</span></div>
         </a>
     </template>
 </body>
