--- a/offline.html
+++ b/offline.html
@@ -110,9 +110,9 @@
                 'Генератор паролей': 'passwordGenerator', 'Генератор QR-кодов': 'qrCodeGenerator', 'Генератор штрих-кодов': 'barcodeGenerator',
                 'Генератор чисел': 'numberGenerator', 'Случайный цвет': 'randomColor', 'Колесо фортуны': 'fortuneWheel', 'Шар предсказаний': 'magicBall',
                 'Конвертер величин': 'unitConverter', 'Конвертер регистра': 'caseConverter', 'Конвертер цветов': 'colorConverter',
-                'Конвертер форматов изображений': 'imageConverter', 'Транслитерация текста': 'textTranslit', 'Конвертер часовых поясов': 'timezoneConverter',
+                'Транслитерация текста': 'textTranslit', 'Конвертер часовых поясов': 'timezoneConverter',
                 'Калькулятор ИМТ': 'bmiCalculator', 'Калькулятор дат': 'dateCalculator', 'Процентный калькулятор': 'percentageCalculator',
-                'Эмодзи и символы': 'emojiAndSymbols', 'Изменение размера изображений': 'imageResizer',
+                'Эмодзи и символы': 'emojiAndSymbols', 'Редактор изображений': 'imageEditor',
                 'Текст в речь': 'textToSpeech', 'Диктофон': 'voiceRecorder', 'Архиватор файлов (ZIP)': 'zipArchiver',
                 'Сканер QR-кодов': 'qrScanner', 'Тест звука и микрофона': 'soundAndMicTest',
                 'Тест мыши': 'mouseTester', 'Тест клавиатуры': 'keyboardTester', 'Графический редактор': 'drawingPad',
