--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="js/utils/tailwind.js"></script>
 
     <!-- Внешние библиотеки -->
+    <script src="js/utils/hls.js@latest"></script>
     <script src="js/utils/lame.min.js"></script>
     <script src="js/utils/jsQR.min.js"></script>
     <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
