--- a/index.html
+++ b/index.html
@@ -385,6 +385,11 @@
             <div class="app-icon-wrapper"><img src="img/imageEditor.svg" alt="Редактор изображений"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Редактор изображений</span></div>
         </a>
+        <a href="?app=onlineTv" class="app-item" style="--app-color: #0ea5e9;" data-name="ТВ онлайн" data-module="onlineTv">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/onlineTv.svg" alt="ТВ онлайн"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">ТВ онлайн</span></div>
+        </a>
     </template>
 </body>
 </html>
