--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@
             <div class="app-icon-wrapper"><img src="img/calorieCalculator.svg" alt="Калькулятор калорий"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Калькулятор калорий</span></div>
         </a>
-                <a href="?app=calculator" class="app-item" style="--app-color: #8b5cf6;" data-name="Калькулятор" data-module="calculator">
+        <a href="?app=calculator" class="app-item" style="--app-color: #8b5cf6;" data-name="Калькулятор" data-module="calculator">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/calculator.svg" alt="Калькулятор"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Калькулятор</span></div>
         </a>
-                <a href="?app=imageEditor" class="app-item" style="--app-color: #8b5cf6;" data-name="Редактор изображений" data-module="imageEditor">
+        <a href="?app=imageEditor" class="app-item" style="--app-color: #8b5cf6;" data-name="Редактор изображений" data-module="imageEditor">
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/imageEditor.svg" alt="Редактор изображений"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Редактор изображений</span></div>
@@ -389,6 +389,11 @@
             <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
             <div class="app-icon-wrapper"><img src="img/onlineTv.svg" alt="ТВ онлайн"></div>
             <div class="app-name-wrapper"><span class="app-name-text">ТВ онлайн</span></div>
+        </a>
+        <a href="?app=markdownEditor" class="app-item" style="--app-color: #4a5568;" data-name="Markdown Редактор" data-module="markdownEditor">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/markdownEditor.svg" alt="Markdown Редактор"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Markdown Редактор</span></div>
         </a>
     </template>
 </body>
