--- a/offline.html
+++ b/offline.html
@@ -121,8 +121,9 @@
                 'Генератор Favicon': 'faviconGenerator',
                 'Калькулятор кредита': 'loanCalculator',
                 'Тест скорости печати': 'typingTest',
-                'Запись экрана': 'screenRecorder', // <-- ДОБАВЛЕНО
+                'Запись экрана': 'screenRecorder',
                 'Flappy Bird': 'flappyBird',
+                'Markdown Редактор': 'markdownEditor',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
