--- a/index.html
+++ b/index.html
@@ -395,6 +395,11 @@
             <div class="app-icon-wrapper"><img src="img/markdownEditor.svg" alt="Markdown Редактор"></div>
             <div class="app-name-wrapper"><span class="app-name-text">Markdown Редактор</span></div>
         </a>
+        <a href="?app=tetris" class="app-item" style="--app-color: #8b5cf6;" data-name="Тетрис" data-module="tetris">
+            <button class="add-to-my-apps-btn"><img src="img/plusapps.svg" class="plus-icon" alt="Добавить"><img src="img/minusapps.svg" class="cross-icon" alt="Удалить"></button>
+            <div class="app-icon-wrapper"><img src="img/tetris.svg" alt="Тетрис"></div>
+            <div class="app-name-wrapper"><span class="app-name-text">Тетрис</span></div>
+        </a>
     </template>
 </body>
 </html>
