--- a/offline.html
+++ b/offline.html
@@ -124,6 +124,7 @@
                 'Запись экрана': 'screenRecorder',
                 'Flappy Bird': 'flappyBird',
                 'Markdown Редактор': 'markdownEditor',
+                'Тетрис': 'tetris',
                 // Приложения, требующие онлайн
                 'Скорость интернета': 'speedTest', 'Радио': 'radio', 'Мой IP': 'myIp', 'Калькулятор валют': 'currencyCalculator',
                 'Заметки и задачи': 'notesAndTasks',
