--- a/index.html
+++ b/index.html
@@ -73,22 +73,6 @@
         <img src="img/loading.svg" alt="Вход..." class="w-16 h-16">
     </div>
 
-    <!-- Контейнер в правом верхнем углу -->
-    <div class="fixed top-4 right-4 flex items-center gap-4 z-50">
-        <div id="google-signin-top-right-container"></div>
-        <div id="user-profile" class="hidden flex items-center gap-3 bg-white dark:bg-gray-700 p-2 rounded-full shadow-md">
-            <img id="user-avatar" class="h-8 w-8 rounded-full" src="" alt="User Avatar">
-            <span id="user-name" class="font-semibold text-sm mr-2"></span>
-            <button id="sign-out-btn" class="text-gray-500 hover:text-gray-800 dark:text-gray-400 dark:hover:text-white" aria-label="Sign out">
-                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
-            </button>
-        </div>
-        <button id="theme-toggle" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors shadow-md">
-            <svg id="sun-icon" class="h-6 w-6 text-gray-900" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
-            <svg id="moon-icon" class="h-6 w-6 text-gray-400 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
-        </button>
-    </div>
-
     <!-- Основной контейнер страницы -->
     <div id="page-container" class="flex min-h-screen">
 
@@ -107,6 +91,23 @@
                 <button data-sort="default" class="filter-btn active">Все</button>
                 <button data-sort="popular" class="filter-btn">Популярные</button>
                 <button data-sort="new" class="filter-btn">Новые</button>
+            </div>
+
+            <!-- Контейнер для кнопок пользователя и темы внизу сайдбара -->
+            <div class="mt-auto flex flex-col gap-4">
+                 <div id="google-signin-top-right-container" class="flex justify-center"></div>
+                 <div id="user-profile" class="hidden flex items-center gap-3 bg-gray-200/80 dark:bg-gray-700/80 p-2 rounded-full">
+                    <img id="user-avatar" class="h-8 w-8 rounded-full" src="" alt="User Avatar">
+                    <span id="user-name" class="font-semibold text-sm mr-auto"></span>
+                    <button id="sign-out-btn" class="text-gray-500 hover:text-gray-800 dark:text-gray-400 dark:hover:text-white" aria-label="Sign out">
+                        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" /></svg>
+                    </button>
+                </div>
+                <button id="theme-toggle" class="p-2 w-full rounded-lg bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 transition-colors flex items-center justify-center gap-2">
+                    <svg id="sun-icon" class="h-6 w-6 text-gray-900" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
+                    <svg id="moon-icon" class="h-6 w-6 text-gray-400 hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
+                    <span class="font-medium">Тема</span>
+                </button>
             </div>
         </aside>
 
